fix(player): favorite button in normal flow, left-aligned above title

--- a/src/scss/pages/playerPlayListPage.scss
+++ b/src/scss/pages/playerPlayListPage.scss
@@ -57,9 +57,6 @@
     }
   }
 
-  &__player-info {
-    position: relative;
-  }
 
   &__title {
     margin-top: 0;
@@ -75,14 +72,12 @@
   }
 
   &__favorite {
-    position: absolute;
-    top: 0;
-    right: 0;
+    align-self: flex-start;
     border: none;
     background: transparent;
     color: rgba($c-tertiary, 0.35);
     cursor: pointer;
-    padding: 0.2rem;
+    padding: 0;
     display: flex;
     align-items: center;
     justify-content: center;
